# playground

./: README.md
ReactGraph/: ReactGraph.sln
ReactGraph/ReactGraph.InMemory/: ReactGraph.InMemory.csproj
ReactGraph/ReactGraph.InMemory/Properties/: AssemblyInfo.cs
ReactGraph/ReactGraph.Kernel/: IActor.cs  IEdge.cs  IGraph.cs  IMessage.cs  INode.cs  IStore.cs  IStoreEntity.cs  ReactGraph.Kernel.csproj  packages.config
ReactGraph/ReactGraph.Kernel/Properties/: AssemblyInfo.cs
ReactGraph/ReactGraph.Tests/: ReactGraph.Tests.csproj
ReactGraph/ReactGraph.Tests/Properties/: AssemblyInfo.cs
constexpr/: Foo.cpp  Foo.h  main.cpp
cpp-move-semantics/: ExpensiveToCopy.h  README.md  move-semantics-test1.cpp  move-semantics-test2.cpp
cpp-sharedptr/: cpp-sharedptr.cpp
reactgraph/: .project  CMakeLists.txt
reactgraph.cpp/src/: main.cpp
reactgraph.cpp/src/graph/: NodeIf.h  ReactiveNodeIf.h  Value.h
reactgraph.cpp/src/reactive/: ObserverIf.h
reactgraph/Default/: makefile  sources.mk
reactgraph/Default/src/: subdir.mk
reactgraph/Default/src/graph/in-memory/: InMemoryReactiveEdge.d  subdir.mk
reactgraph/Default/src/reactive/in-memory/: InMemorySubject.d  subdir.mk
reactgraph/src/: main.cpp
reactgraph/src/graph/: CMakeLists.txt  Edge.h  EdgeIf.h  Event.h  Identity.h  Node.h  NodeIf.h  Primitives.h  ReactiveEdgeIf.h  ReactiveNode.cpp  ReactiveNode.h  Value.h
reactgraph/src/graph/in-memory/: InMemoryReactiveEdge.cpp  InMemoryReactiveEdge.h  InMemoryReactiveNode.cpp  InMemoryReactiveNode.h  Utilities.h
reactgraph/src/reactive/: ObservableIf.h  Stream.h  SubjectIf.h  Subscriber.h  Subscription.h  SubscriptionIf.h
reactgraph/src/reactive/in-memory/: InMemoryLambdaObserver.h  InMemorySubject.cpp  InMemorySubject.h  InMemorySubscription.h
(+2 files in other folders)
